--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
-  firebase_messaging: ^16.0.0
+  flutter_local_notifications: ^17.2.3
   uuid: ^3.0.7
   shared_preferences: ^2.2.3
   share_plus: ^7.2.2
